--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.moo.addressbook</groupId>
 	<artifactId>rg-addressbook-api</artifactId>
-	<version>0.1.0</version>
+	<version>1.0.0</version>
 	<name>rg-addressbook-api</name>
 	<description>Address Book API</description>
 
@@ -54,6 +54,13 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
